# learnrag

./: .gitignore  LICENSE  TODO.md  hello.py  pyproject.toml  scratch1.ipynb
database/: schema_def.py
face_detection/: detect_face.py
utils/: logging.py  utils.py
